mode cobrinha.yml

--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -1,17 +1,13 @@
-          name: Generate Snake
+name: Generate Snake
 
 on:
-  schedule:
-  
-  
+  schedule:  
     - cron: "0 */1 * * *"
 # "*/1 * * * *"
 # cron(0/5
 # "0 */1 * * *"
 
-
   workflow_dispatch:
-
 
 jobs:
   build:
@@ -21,7 +17,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - uses: Platane/snk@v2
-        id: bylickilabs-Snake
+        id: MelvimJones-Snake
         with:
           github_user_name: MelvimJones
           outputs: |
@@ -29,8 +25,8 @@ jobs:
 
 # I     dist/github-snake.svg
 # II    dist/github-snake-dark.svg?palette=github-dark
-# III   dist/bylickilabs-Snake.svg?palette=github-dark&color_snake=red&color_dots=#000000F;#CDAD00;#EEC900;#FFD700;#FFD700;
-# IV    dist/bylickilabs-Snake.svg?palette=github-dark&color_snake=white&color_dots=#000000F;#5E5E5E;#787878;#919191;#BDBDBD;
+# III   dist/MelvimJones-Snake.svg?palette=github-dark&color_snake=red&color_dots=#000000F;#CDAD00;#EEC900;#FFD700;#FFD700;
+# IV    dist/MelvimJones-Snake.svg?palette=github-dark&color_snake=white&color_dots=#000000F;#5E5E5E;#787878;#919191;#BDBDBD;
 
             
       - run: git status
